--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
 	</properties>
 
 	<dependencies>
+	
+	<dependency>
+     	<groupId>nz.net.ultraq.thymeleaf</groupId>
+    	<artifactId>thymeleaf-layout-dialect</artifactId>
+	</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -79,9 +84,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>postgresql</groupId>
+			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.1-901.jdbc4</version>
+			<version>9.4-1206-jdbc42</version>
 		</dependency>
 		
 	</dependencies>
